# swagger/swagger.json
@@ -5,18 +5,14 @@
     "swagger": "2.0",
     "info": {
         "description": "Student-Supervisor Relationships",
-        "title": "SSR Application",
         "contact": {
             "name": "Ivakhnenko Dmitry, Moscow",
             "url": "github.com/ivaahn/ssr",
             "email": "ivahnencko01@gmail.com"
-        },
-        "version": "0.1.0"
+        }
     },
-    "host": "localhost:8080",
-    "basePath": "/",
     "paths": {
-        "/api/auth/login": {
+        "/api/v1/auth/login": {
             "post": {
                 "consumes": [
                     "application/x-www-form-urlencoded"
@@ -704,7 +700,7 @@
         "OAuth2Password": {
             "type": "oauth2",
             "flow": "password",
-            "tokenUrl": "http://localhost:8080/api/v1/auth/login"
+            "tokenUrl": "/api/v1/auth/login"
         }
     }
 }
